--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,11 @@
         {% endblock %}
     </head>
     <body>
+    <header>
+        {{ include('_navbar.html.twig') }}
+    </header>
+    <div class="container">
         {% block body %}{% endblock %}
+    </div>
     </body>
 </html>
