START 4 - Exercice 2: navbar links

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -3,16 +3,16 @@
         <a class="navbar-brand" href="#">Sensio TV+</a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="{{ path('app_home') }}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Book</a>
+                <a class="nav-link" href="{{ path('app_book') }}">Book</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Movie</a>
+                <a class="nav-link" href="{{ path('app_movie_home') }}">Movie</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="{{ path('app_contact') }}">Contact</a>
             </li>
         </ul>
     </div>
